Fix icon align post-price

--- a/silversea-com-ui/jcr_root/apps/silversea/silversea-com/components/editorial/findyourcruise2018/clientlibs/files/findyourcruise2018.less
+++ b/silversea-com-ui/jcr_root/apps/silversea/silversea-com/components/editorial/findyourcruise2018/clientlibs/files/findyourcruise2018.less
@@ -31,6 +31,7 @@
 
   .price-suffixe i {
     font-size: 14px;
+    vertical-align: sub;
   }
 
   .c-fyc-v2__result__content__price__notWaitList {
